@@ -1,3 +1,10 @@
+2011-01-23 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCtree_dec.hpp,
+	  src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc:
+	  Fixed MSVC++ compilation problem, preparations for re-rooting the tree decomposition.
+
 2011-01-23 Borut Razem <borut.razem AT gmail.com>
 
 	* src/avr/avr.vcxproj, src/ds390/ds390.vcxproj, src/hc08/hc08.vcxproj,
